Make Run model extend RunCreate
